# Recommender-System-for-Tourism-Backend

./: .env  .gitignore  LICENSE  README.md  atractii_master_final.csv  main.py  pyproject.toml
app/: main.py  model_test.py
app/database/: connection.py
app/models/: attraction_schedule.py  attraction_sentiment.py  attractions.py  destination.py  recommendation_feedback.py  review.py  user.py  user_preferences.py
app/routers/: attractions.py  auth.py  feedback.py  itinerary.py  recommendations.py  users.py
app/schemas/: attraction_schema.py  auth_schema.py  feedback_schema.py  itinerary_schema.py  recommendation_schema.py  user_schema.py
app/services/: ai_loader.py  auth_service.py  itinerary_service.py  recommender.py  sentiment_service.py
app/services/models/: cosine_model.pkl  cosine_model1.pkl  sentiment_model.pkl  sentiment_model_vechi.pkl  svd_model.pkl
app/tests/: test_itinerary.py  test_recommender.py  test_sentiment.py
